En cours de mise en place de la réécriture d'URL et la création d'un modèle d'objet.

--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -2,12 +2,10 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>J'essai la page</title>
+        <title><?=$this->Title?></title>
     </head>
 
     <body>
-        Voila le body -> <b><?= $this->Body; ?> </b>
-        <br>
-        <?= $this->test ?>
+        <p>Voila le body -> <strong><?= $this->message; ?></strong></p>
     </body>
 </html>
