--- a/application/views/index/index.phtml
+++ b/application/views/index/index.phtml
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title><?=$this->Title?></title>
+        <title><?=$this->title?></title>
     </head>
 
     <body>
